# firmador_sri_ec

./: .gitignore  LICENSE  NOTAS_X509_ISSUER_NAME.txt  README.md  pyproject.toml  setup.py
examples/: __init__.py  ejemplo_avanzado.py  ejemplo_basico.py
firmador_sri_ec/: __init__.py  canonicalization.py  certificate.py  compat.py  constants.py  firmador.py  signer.py  xml_builder.py
firmas/: .gitkeep
tests/: __init__.py  test_firmador.py
